--- a/02-Dekorace-nadpisu/style.css
+++ b/02-Dekorace-nadpisu/style.css
@@ -4,6 +4,88 @@ html { box-sizing: border-box; }
 
 body {
 	font: 16px/1.5 sans-serif;
+	margin: 30px;
 }
 
 /*************************************************/
+.hlavni::after {
+	content:"";
+	display: block;
+	width: 100px;
+	height: 10px;
+	background-color: #80a1d4;
+	margin-top: 10px;
+}
+
+.prvni{
+	text-align: center;
+}
+
+.prvni::before,
+.prvni::after {
+	/*  obrazku nejde nastavovat velikost obrazku, zobrazi se vzdycky ve velikosti, v jake ve slozce, proto se resi viz nize */
+	/* content: url(images/flourish-top.png); */
+	content:"";
+	display: block;
+	height: 30px;
+	/* contain - pozadi se zmensi tak, aby prvek byl kompletne obsažený */
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.prvni::before {
+	background-image: url(images/flourish-top.png);
+}
+
+.prvni::after {
+	background-image: url(images/flourish-bottom.png);
+}
+
+.druhy {
+	text-align: center;
+}
+
+.druhy::before,
+.druhy::after {
+	/*  obrazku nejde nastavovat velikost obrazku, zobrazi se vzdycky ve velikosti, v jake ve slozce, proto se resi viz nize */
+	/* content: url(images/flourish-top.png); */
+	content:"";
+	display: inline-block;
+	width: 2em;
+	height: 0.8em;
+	/* contain - pozadi se zmensi tak, aby prvek byl kompletne obsažený */
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.druhy::before {
+	background-image: url(images/swirl-left.png);
+	margin-right: 10px;
+}
+
+.druhy::after {
+	background-image: url(images/swirl-right.png);
+	margin-left: 10px;
+}
+
+.treti {
+	position: relative;
+}
+
+.treti::before {
+	content:"";
+	display: block;
+	width: 70px;
+	height: 70px;
+	background-image: linear-gradient(to top right,  magenta, cyan);
+
+	position: absolute;
+	top: -16px;
+	left: -25px;
+
+	transform: rotate(45deg);
+
+	z-index: -999;
+}
